Added incidents listing

--- a/config/locales/es_mx/comments.yml
+++ b/config/locales/es_mx/comments.yml
@@ -1,5 +1,8 @@
 es_MX:
   comments:
+    count:
+      one: "<b>Un</b> comentario"
+      many: "<b>%{number}</b> comentarios"
     views:
       index:
         title: "Comentarios"
