--- a/config/locales/es_mx/bikes.yml
+++ b/config/locales/es_mx/bikes.yml
@@ -34,6 +34,8 @@ es_MX:
         theft: "Robo"
         assault: "Asalto"
         accident: "Accidente"
+        breakdown: "Averia"
+        
     actions:
       register: "Registra tu bici"
       save: "Registrar bici"
