--- a/config/locales/es_mx/incidents.yml
+++ b/config/locales/es_mx/incidents.yml
@@ -60,6 +60,9 @@ es_MX:
       show:
         number_not_given: "---"
         vehicle_identifier: "Placa del vehículo: "
+        fixed:
+          true: "Reparado"
+          false: "Sin reparar"
         attacher_used: "Equipo de seguridad utilizado: "
         bike_profile: "Página de esta bici"
         between: "entre %{start_hour} y %{final_hour} hrs"
