Implemented adding of workshops/bike stores

--- a/config/locales/es_mx/general.yml
+++ b/config/locales/es_mx/general.yml
@@ -2,6 +2,11 @@ es_MX:
   app:
     name: "Wikicleta"
     categories:
+      places:
+        categories:
+          workshop: "Talleres y Tiendas"
+          parking: "Estacionamientos"
+          bikefriendly_place: "Lugares bici-amigables"
       incidents:
         categories:
           breakdown: "Avería"
