--- a/config/locales/es_mx/views.yml
+++ b/config/locales/es_mx/views.yml
@@ -13,6 +13,6 @@ es_MX:
         tips: "Tips"
         parkings: "Bici-estacionamientos"
         routes: "Rutas y Bici-buses"
-        places: "Lugares bici-amigables"
+        places: "Lugares"
         lanes: "Ciclovias"
       
