--- a/config/locales/es_mx/places.yml
+++ b/config/locales/es_mx/places.yml
@@ -1,7 +1,23 @@
 es_MX:
   places:
+    general:
+      layers:
+        message: "Selecciona alguna de las capas de lugares siguientes"
     workshops:
       views:
+        edit:
+          title: "Modificar datos de Taller/Tienda de Bicis"
+          steps:
+            one: "1. De ser necesario, ajusta la ubicación de la tienda o taller"
+            two: "2. Ajusta los detalles del lugar"
+        show:
+          store: "Tienda y Taller"
+          workshop: "Solo taller"
+          horary_empty: "Horario no proporcionado"
+          horary: "Abierto: "
+          phones: "Teléfono"
+          twitter: "Cuenta de Twitter"
+          webpage: "Página web"
         form:
           name: "Nombre"
           details: "Detalles"
@@ -12,8 +28,12 @@ es_MX:
           twitter: "Cuenta en Twitter"
           horary: "Horario de servicio"
           others_can_edit_it: "¿Otros pueden editar este taller/tienda?"
+          validations:
+            name: "Un nombre para este taller/tienda es necesario"
+            coordinates: "No has seleccionado una ubicación en el mapa"
+            details: "Escribe algunos detalles sobre este taller/tienda"
         new:
           title: "Nuevo Taller/Tienda de Bicis"
           steps:
             one: "1. Ubica la tienda o taller en el mapa"
-            two: "2. Escribe el nombre y otros detalles útiles"
+            two: "2. Escribe algunos detalles del lugar"
