--- a/config/locales/es_mx/incidents.yml
+++ b/config/locales/es_mx/incidents.yml
@@ -13,7 +13,7 @@ es_MX:
         vehicle_identifier: "Placa del vehículo"
   incidents:
     listing:
-      empty: "No hay reportes que mostrar, lo cual es muy bueno"
+      empty: "No hay reportes que mostrar, lo cual es bueno"
     connectives:
       of: "de"
       by: "en"
