--- a/config/locales/es_mx/general.yml
+++ b/config/locales/es_mx/general.yml
@@ -1,6 +1,8 @@
 es_MX:
   app:
     name: "Wikicleta"
+    contact:
+      promote: "publica@wikicleta.com"
     categories:
       parkings:
         kinds:
