Profiles home section implemented with recent users activity

--- a/config/locales/es_mx/cities.yml
+++ b/config/locales/es_mx/cities.yml
@@ -1,6 +1,10 @@
 es_MX:
   cities:
     views:
+      display:
+        on_named: "en %{city}"
+        on_unknown: "en ciudad desconocida"
+        yours: "en tú ciudad"
       alerts:
         not_set: "Te falta seleccionar tu ciudad para ver lugares cercanos."
         select_city: "Establecer ciudad"
