Fixed user picture bug that caused it not to appear on some views

--- a/config/locales/es_mx/defaults.yml
+++ b/config/locales/es_mx/defaults.yml
@@ -170,7 +170,7 @@ es_MX:
         accepted: "debe ser aceptado"
         even: "debe ser un número par"
         odd: "debe ser un número non"
-
+        extension_white_list_error: "Formato de imagen desconocido"
   activerecord:
     errors:
       template:
