Enhanced user picture displaying. Improved comments listing and fixed non clearing input box for comment

--- a/config/locales/es_mx/comments.yml
+++ b/config/locales/es_mx/comments.yml
@@ -10,7 +10,7 @@ es_MX:
     actions: 
       comment: "Comentar"
       cancel: "Descartar comentario"
-      delete: "Eliminar comentario"
+      delete: "<i class='icon-trash'></i> Eliminar"
     messages:
       added: "Comentario agregado"
       deleted: "Comentario eliminado"
