Preparations for publishing ongoing: Included to sprockets most assets so far, improved deficient UIX

--- a/config/locales/es_mx/landing.yml
+++ b/config/locales/es_mx/landing.yml
@@ -17,7 +17,7 @@ es_MX:
       sections:
         media: "Reportajes y Notas"
         what_is:
-          text: "Con Wikicleta puedes encontrar y compartir, desde tu teléfono o desde la web, información útil para ir en bici por la ciudad"
+          text: "Encuentra y comparte, desde tu teléfono o desde la web, información útil para ir en bici por la ciudad"
           features: "¿Qué es?"
         registration: 
           title: "Sé uno de los 100"
