--- a/config/locales/es_mx/devise.yml
+++ b/config/locales/es_mx/devise.yml
@@ -25,6 +25,9 @@ es_MX:
       signed_in: '¡Estás dentro!'
       signed_out: '¡Nos vemos luego!'
     passwords:
+      new_password: "Nueva contraseña"
+      new_password_confirmation: "Confirma tu nueva contraseña"
+      reset: "Reestablece tu contraseña"
       send_instructions: 'Te llegará un correo para cambiar tu contraseña'
       updated: 'Tu contraseña ha sido cambiada exitosamente'
       updated_not_active: 'Su contraseña se cambió exitosamente.'
@@ -34,6 +37,7 @@ es_MX:
       send_paranoid_instructions: 'Si su correo electrónico existe en nuestra base de datos, usted recibirá un correo con instrucciones sobre como confirmar su cuenta en unos minutos.'
       confirmed: 'Su cuenta fue confirmada exitosamente, usted ha sido ingresado al sistema.'
     recovering: 
+      commit: "Si, lo solicité, quiero reestablecer mi contraseña"
       greeting: "¡Hola %{username}!"
       explanation: "Alguien solicitó un cambio de constraseña para la cuenta con correo: %{email}"
       disclaimer: "Si no fuiste tu quien solicito el cambio de contraseña, puedes de manera segura ignorar este correo"
