--- a/config/locales/es_mx/general.yml
+++ b/config/locales/es_mx/general.yml
@@ -1,5 +1,6 @@
 es_MX:
   app:
+    firm: "Wikicleta 2013"
     models:
       incident: "Incidente"
       tip: "Tip"
@@ -108,6 +109,7 @@ es_MX:
     accept: "Aceptar"
     search: "Buscar"
     none: "Ninguno"
+    back_start: "Ir a la página principal"
     back: "Atrás"
     back_arrow: "&larr; Atrás"
     close: "Cerrar"
