--- a/config/locales/es_mx/landing.yml
+++ b/config/locales/es_mx/landing.yml
@@ -20,8 +20,8 @@ es_MX:
           text: "Encuentra y comparte, desde tu teléfono o desde la web, información útil para ir en bici por la ciudad"
           features: "¿Qué es?"
         registration: 
-          title: "Sé uno de los 100"
-          call: "Estamos reclutando a los primeros 100 usuarios de Wikicleta que nos ayudarán a probar esta primer versión"
+          title: "Comienza a usarla"
+          call: "Estamos buscando a 50 apasionados de la bici y la ciudad que quieran probar este primer beta de Wikicleta"
           why: "¿Por qué?"
           explanation: "Empresas grandes como Google® y otras que apenas inician como MailboxApp® han empleado este método para probar nuevos productos o servicios. Esa es una forma de conocer las opiniones de los usuarios más apasionados en el uso de la bicicleta y de la tecnología. Para más sobre esto buscar: <i>early adopters</i>"
           access_code: "¿Ya tienes un código de acceso?"
