Added mix-panel metrics and improved the feedback on non-implemented yet features

--- a/config/locales/es_mx/general.yml
+++ b/config/locales/es_mx/general.yml
@@ -132,6 +132,10 @@ es_MX:
     new: 
       fem: "Nueva"
       masc: "Nuevo"
+  features:
+    not_ready: 
+      title: "¡Ups! Esta funcionalidad está todavía en desarrollo"
+      subtitle: "Espérala para finales de Julio"
   indicators:
     saving: "Guardando ..."
   connectives:
