--- a/config/locales/es_mx/devise.yml
+++ b/config/locales/es_mx/devise.yml
@@ -22,7 +22,7 @@ es_MX:
       timeout: 'Su sesión ha expirado, por favor ingrese nuevamente para continuar.'
       inactive: 'Su cuenta aún no ha sido activada.'
     sessions:
-      signed_in: '¡Estás dentro!'
+      signed_in: '¡Hola desde Wikicleta!'
       signed_out: '¡Nos vemos luego!'
     passwords:
       new_password: "Nueva contraseña"
