--- a/config/locales/es_mx/trips.yml
+++ b/config/locales/es_mx/trips.yml
@@ -4,7 +4,7 @@ es_MX:
       index:
         empty: 
           message: "No hay paseos en bici en esta área"
-          suggest: "Comparte el tuyo"
+          suggest: "Compartenos el tuyo"
         trip:
           pois:
             to_see: "puntos para ver"
