--- a/config/locales/es_mx/cycling_groups.yml
+++ b/config/locales/es_mx/cycling_groups.yml
@@ -37,6 +37,7 @@ es_MX:
         facebook_url: "Liga a Facebook"
         website_url: "Liga a tu Página"
         validations:
+          url: "La URL de este campo debe tener la forma de http://www.example.org"
           name: "Tu grupo debe tener un nombre"
           details: "Cuéntanos un poco sobre tu grupo"
           meeting_time: "Te falta poner la hora en la que deben empezar a llegar los amigos del pedal"
