Implemented friendly display of not provided timings for a cycling group

--- a/config/locales/es_mx/general.yml
+++ b/config/locales/es_mx/general.yml
@@ -22,6 +22,7 @@ es_MX:
           other: "Faltan %{days} días para rodar "
           zero: "Hoy rueda "
       days_until: 
+        not_provided: "La fecha en la que ruedan no está disponible"
         one: "Mañana"
         other: "Faltan %{days} días para este evento"
         zero: "¡Hoy ruedan!"
