Solved Issue #15: The user should be able to see the details of a route

--- a/config/locales/en/translations.yml
+++ b/config/locales/en/translations.yml
@@ -5,6 +5,7 @@ en:
     back_arrow: "&larr; Back"
     details: "Details"
     hide: "Hide"
+    edit: "Edit"
   app:
     name: Wikicleta
     navbar:
